--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ python:
   - "3.8"
 # command to install dependencies
 install:
-  - pip install flake8
+  - pip install flake8 pytest
 # command to run tests
 script:
   -  # stop the build if there are Python syntax errors or undefined names
   - flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
   - # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
   - flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
+  - # Test with pytets
+  - pytest
