--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ script:
   - # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
   - flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
   - # Test with pytets
-  - pytest
+  - # pytest
